correção da tarefa

--- a/cadastro.html
+++ b/cadastro.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <header><h1>Ficha de cadastro</h1></header>
-    <input type="text" placeholder="Nome"><br>
+    <label for="text">Nome</label>
+    <input id="text" type="text" placeholder="Nome"><br>
+    <label for="text">Email</label>
     <input id="email" type="email" placeholder="Email"><br>
-    <input type="password" placeholder="Senha"><br><br>
+    <label for="email">Senha</label>
+    <input id="password" type="password" placeholder="Senha"><br><br>
     <button type="submit">Enviar</button>
 </body>
 </html>
